plugins {
    id "org.springframework.boot" version "3.4.4"
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
    id 'jacoco'
    id 'com.diffplug.spotless' version '7.0.2'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

jar {
    archiveBaseName = 'planningpoker'
    manifest {
        attributes 'Implementation-Version': version
    }
}

repositories {
    mavenCentral()
    flatDir { dirs '../planningpoker-web/dist/libs' }
}

tasks.withType(JavaCompile).configureEach {
    dependsOn ':planningpoker-web:jar'
}

dependencies {
    implementation name: 'planningpoker-web'
    implementation 'com.google.guava:guava:33.4.0-jre'
    implementation 'org.jetbrains:annotations:26.0.2'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    implementation 'org.springframework:spring-messaging'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.4'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.4'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.15.2'
    testImplementation 'org.mockito:mockito-core:5.15.2'
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        events 'passed', 'skipped', 'failed'
        showStandardStreams = false
    }
}

tasks.named('jacocoTestReport') {
    reports {
        xml.required = true
        html.required = true
    }
}

spotless {
    java {
        target 'src/main/java/**/*.java', 'src/test/java/**/*.java'
        googleJavaFormat('1.22.0')
        removeUnusedImports()
        trimTrailingWhitespace()
        endWithNewline()
    }
}

tasks.named('check') {
    dependsOn tasks.named('jacocoTestReport')
    dependsOn tasks.named('spotlessCheck')
}

tasks.register('stage') {
    dependsOn 'build'
}
